--- a/pom.xml
+++ b/pom.xml
@@ -113,14 +113,25 @@
         <version>2.5</version>
         <scope>test</scope>
       </dependency>
+
+      <dependency>
+        <groupId>com.zaxxer</groupId>
+        <artifactId>HikariCP</artifactId>
+        <version>2.7.6</version>
+      </dependency>
       <dependency>
         <groupId>org.reflections</groupId>
         <artifactId>reflections</artifactId>
         <version>0.9.9-RC2</version>
       </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>1.5.8.RELEASE</version>
+		</dependency>
 
 
-    </dependencies>
+	</dependencies>
     <build>
       <plugins>
         <plugin>
