remove ide file

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .idea/
-jsonb-orm.iml
-
+jsonb-entity-manager.iml
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
