--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,8 @@ jobs:
     environment:
       # Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
+      _JAVA_OPTIONS: -Djdk.net.URLClassPath.disableClassPathURLCheck=true
+      JAVA_OPTIONS: -Djdk.net.URLClassPath.disableClassPathURLCheck=true
 
     steps:
       - checkout
