--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
       JAVA_OPTIONS: -Djdk.net.URLClassPath.disableClassPathURLCheck=true
 
     steps:
+      - setup_remote_docker
       - checkout
 
       # Download and cache dependencies
